# dynamic_robot_localization

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml
cfg/: PlanarLocalization.cfg
configs/: PR2-Groovy.sh  PR2-commands.txt  ROS-Groovy.sh  ROS-Groovy_Gazebo.sh  catkinWS.sh  commands.txt  guardian-commands.txt  pr2-commands.txt
configs/eclipse/: eclipsePlugins.txt  eclipseShortcuts.txt  rosWithEclipse.txt
configs/filters/: shadow_filter.yaml
configs/ros_gazebo/: a1-Apps.sh  a2-GitConfigs.sh  b1-ROS-Groovy.sh  b2-CatkinWorkspace.sh  b3-Gazebo.sh  b4-Gazebo-ros-pkgs.sh  c1-RViz-catkin.sh  c1-RViz-rosbuild.sh  d1-Guardian.sh  d2-PR2-Groovy.sh
datasets/: commands.txt
docs/: cad_to_octree.md  create_eclipse_projects.sh  eclipseProjects.sh  guardian-commands.txt  mesh_conversions.md  mesh_conversions.txt  mesh_tessellation.md  mesh_tessellation.txt  octomap_commands.md  octomap_commands.txt  octreeFromCAD.txt  perception-overview.drawio  pr2-commands.txt  system-modules.pptx  use_cases.md
include/dynamic_robot_localization/: pose_to_tf_publisher.h  tf_publisher.h
include/dynamic_robot_localization/cloud_analyzers/: angular_distribution_analyzer.h  cloud_analyzer.h
include/dynamic_robot_localization/cloud_filters/: approximate_voxel_grid.h  cloud_filter.h  covariance_sampling.h  crop_box.h  euclidean_clustering.h  hsv_segmentation.h  pass_through.h  plane_segmentation.h  radius_outlier_removal.h  random_sample.h  region_growing.h  scale.h  statistical_outlier_removal.h  voxel_grid.h
install/: a_dependencies.bash  a_dependencies.sh  b_repositories.bash  b_repositories.sh  b_workspace.bash  c_repositories.bash  c_repositories_update.bash  c_repositories_update.sh  d_rosped.bash  e_build.bash  install.bash  install.sh  repositories_update.bash  setup.sh
launch/: 3d_localization.launch  dynamic_robot_localization.launch  dynamic_robot_localization_system.launch  dynamic_robot_localization_system_6dof.launch  guardian_navigation.launch  guardian_slam.launch  laser_assembler.launch  laserscan_to_pointcloud_assembler.launch  navigation.launch  octo_map.launch  planar_localization.launch  pose_to_tf_publisher.launch  pr2_navigation.launch  pr2_slam.launch  slam.launch  ukf.launch
maps/: ship_interior.stl  ship_interior_20mm.bt  willow_garage.pgm  willow_garage.yaml
maps/ship_interior/: ship_interior_10mm.bt  ship_interior_20mm.binvox
msg/: LocalizationConfiguration.msg  LocalizationDetailed.msg  LocalizationDiagnostics.msg  LocalizationTimes.msg
results/: ros_topics.txt  topics.txt
rviz/: ethzasl_datasets.rviz  guardian_localization.rviz  guardian_slam.rviz  laser_assembler.rviz  laserscan_to_pointcloud_assembler.rviz  planar_localization.rviz  pr2_localization.rviz  pr2_slam.rviz
src/: pose_to_tf_publisher.cpp  pose_to_tf_publisher_node.cpp  tf_publisher.cpp
src/cloud_analyzers/: angular_distribution_analyzer.cpp  cloud_analyzer.cpp
src/cloud_filters/: approximate_voxel_grid.cpp  cloud_filter.cpp  covariance_sampling.cpp  crop_box.cpp  euclidean_clustering.cpp  hsv_segmentation.cpp  pass_through.cpp  plane_segmentation.cpp  radius_outlier_removal.cpp  random_sample.cpp  region_growing.cpp  scale.cpp  statistical_outlier_removal.cpp  voxel_grid.cpp
src/cloud_matchers/: cloud_matcher.cpp
src/cluster_selectors/: cluster_selector.cpp  cluster_sorters.cpp
src/common/: circular_buffer_pointcloud.cpp  cloud_publisher.cpp  cloud_viewer.cpp  configurable_object.cpp  cumulative_static_transform_broadcaster.cpp  math_utils.cpp  performance_timer.cpp  pointcloud2_builder.cpp  pointcloud_conversions.cpp  pointcloud_utils.cpp  registration_visualizer.cpp  time_utils.cpp  transformation_aligner.cpp  verbosity_levels.cpp
src/convergence_estimators/: default_convergence_criteria_with_time.cpp
src/curvature_estimators/: curvature_estimator.cpp  principal_curvatures_estimation.cpp
src/localization/: localization.cpp  localization_node.cpp
src/localization_publisher/: pose_to_tf_publisher.cpp  pose_to_tf_publisher_node.cpp
src/normal_estimators/: moving_least_squares.cpp  normal_estimation_omp.cpp  normal_estimator.cpp  normal_estimator_sac.cpp
src/outlier_detectors/: euclidean_outlier_detector.cpp  outlier_detector.cpp
src/planar/: planar_localization.cpp  planar_localization_node.cpp  planar_matcher.cpp
src/registration_covariance_estimators/: registration_covariance_estimator.cpp  registration_covariance_point_to_plane_3d.cpp  registration_covariance_point_to_plane_pm_3d.cpp  registration_covariance_point_to_point_3d.cpp  registration_covariance_point_to_point_pm_3d.cpp
src/tools/: mesh_to_pcd.cpp
src/transformation_validators/: euclidean_transformation_validator.cpp  transformation_validator.cpp
src/tridimensional/: dynamic_localization.cpp  point_cloud_filter.cpp  point_cloud_matcher.cpp
srv/: ReloadLocalizationConfiguration.srv  StartProcessingSensorData.srv
tests/: localization_plots.launch
tools/: binvox  convert_mesh_to_pcd.bash  convert_mesh_to_pcd.sh  convert_meshes_to_pcd.bash  convert_meshes_to_pcd.sh  create_eclipse_projects.bash  create_eclipse_projects.sh  meshlab_filters.mlx
worlds/: guardian_navigation.world  navigation.world
yaml/cloud_filters/: pass_through.yaml  voxel_grid.yaml
yaml/cloud_matchers/: cloud_matcher.yaml
yaml/common/: debug.yaml
yaml/configs/: disable_debug_topics.yaml  filters_2d.yaml  filters_3d.yaml  filters_3d_tof.yaml  pose_tracking.yaml  pose_tracking_cluttered_environments.yaml  pose_tracking_unstable_ground.yaml
yaml/localization/: cloud_matchers.yaml  frame_ids.yaml  general_configurations.yaml  localization_pipeline.yaml  message_management.yaml  publish_topic_names.yaml  reference_pointcloud.yaml  subscribe_topic_names.yaml
yaml/normal_estimators/: moving_least_squares.yaml  normal_estimation.yaml
yaml/outlier_detectors/: euclidean_outlier_detector.yaml  outlier_detector.yaml
yaml/schema/: drl_configs.yaml  notes.txt
yaml/transformation_validators/: euclidean_transformation_validator.yaml
(+209 files in other folders)
