<?xml version="1.0"?>
<package format="2">
	<name>dynamic_robot_localization</name>
	<version>1.0.0</version>
	<description>The dynamic_robot_localization package offers 3 DoF and 6 DoF robot self-localization along with a set of libraries suitable for generic point cloud alignment</description>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>


	<buildtool_depend>catkin</buildtool_depend>


	<!-- ################################################################## -->
	<!-- Build dependencies -->
	<!-- ################################################################## -->

	<!-- developed ros packages -->
	<depend>laserscan_to_pointcloud</depend>	<!-- https://github.com/carlosmccosta/laserscan_to_pointcloud -->
	<depend>pose_to_tf_publisher</depend>		<!-- https://github.com/carlosmccosta/pose_to_tf_publisher -->

	<!-- other ros packages -->
	<depend>angles</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>geometry_msgs</depend>
	<depend>message_generation</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>rosconsole</depend>
	<depend>rostime</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>xmlrpcpp</depend>

	<!-- system dependencies -->
	<depend>libboost-all-dev</depend>
	<depend>libeigen3-dev</depend>
	<depend>PCL</depend> <!-- requires to compile pcl from source using branch master-all-pr from https://github.com/carlosmccosta/pcl -->


	<!-- ################################################################## -->
	<!-- Run dependencies -->
	<!-- ################################################################## -->

	<!-- other ros packages (run only) -->
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>map_server</exec_depend>
	<exec_depend>octomap_server</exec_depend>
	<exec_depend>robot_localization</exec_depend>

	<!-- system dependencies -->
	<exec_depend>coreutils</exec_depend>


	<export>
		<rosdoc config="rosdoc.yaml" />
	</export>
</package>
